--- a/app/presenters/templates/Homepage/default.latte
+++ b/app/presenters/templates/Homepage/default.latte
@@ -138,7 +138,8 @@
                                     <h4>{$u->name ? $u->name : $u->username} <small>{$c->posted|date:'j.n.Y H:i'}{if $user->isInRole('admin') && $c->seen == null && $c->ref('users')->role != 'admin'} <span class="label label-danger">new</span>{/if}</small></h4>
                                 </div>
                                 <div class="comment-body">
-                                    {$parsedown->parse($c->text)|noescape}
+                                    {var $text = htmlentities($c->text, ENT_QUOTES, 'UTF-8')}
+                                    {$parsedown->parse($text)|noescape}
                                 </div>
                             </div>
                             <div class="panel-footer comment-responses">
